Stop unnecessary horizontal scroll > relates #84
Not tested (beyond Chrome dev tools)! 
As mentioned in issue #84

--- a/public/index.css
+++ b/public/index.css
@@ -1,6 +1,7 @@
 /* preset */
 
 body {
+  overflow-x: hidden;
   width: 100vw;
   height: 100vh;
   padding: 0;
